--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_vorlesung_main.tex
@@ -74,6 +74,11 @@
 \newcommand{\reqnomode}{\tagsleft@false\let\veqno\@@eqno}
 \makeatother
 
+\DeclareMathOperator{\TP}{TP}
+\DeclareMathOperator{\AZ}{AZ}
+\DeclareMathOperator{\FAZ}{FAZ}
+\DeclareMathOperator{\SAZ}{SAZ}
+\DeclareMathOperator{\PZ}{PZ}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -118,5 +123,6 @@
 \input{optinum_5_1_definitionen}
 \input{optinum_5_2_minimumSpanningTree}
 \input{optinum_5_3_optimaleWege}
+\input{optinum_5_4_maximaleFluesse}
 
 \end{document}
