--- a/Math-Ba-OPTINUM/optinum_vorlesung/optinum_3_1_basisloesungenEcken.tex
+++ b/Math-Ba-OPTINUM/optinum_vorlesung/optinum_3_1_basisloesungenEcken.tex
@@ -45,14 +45,14 @@ Dabei gilt: Eine Ecke $x \in G$ ist genau dann degeneriert, wenn ein $i \in I_B$
 \begin{beispiel} %3.1
 	Sei
 	\begin{equation*}
-		G \defeq \menge{x \in \Rn \colon x_1+x_2+x_3=1, \enskip 2x_1+x_2+x_4=2, \enskip x_1,\dots , x_4 \ge 0}
+		G \defeq \menge{x \in \R^4 \colon x_1+x_2+x_3=1, \enskip 2x_1+x_2+x_4=2, \enskip x_1,\dots , x_4 \ge 0}
 	\end{equation*}
 	Hierbei ist die Ecke $E_1 = \transpose{0,1,0,1}$ nicht degeneriert, da sie nur die Zerlegung $I_B = \menge{2,4}$ und $I_N = \menge{1,3}$ gestattet.
 	Die Ecke $E_2 = \transpose{1,0,0,0}$ ist degeneriert, weil ein $i \in I_B$ zwangsläufig $x_i = 0$ erfüllen muss.
 \end{beispiel}
 
 \begin{satz} %3.2
-	Seo $G \neq \emptyset$. Dann besitzt $G$
+	Sei $G \neq \emptyset$. Dann besitzt $G$
 	\begin{enumerate}[nolistsep, topsep=-\parskip]
 		\item mindestens eine Ecke
 		\item höchstens endlich viele Ecken.
